// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb should allow Breadcrumb.Item is null or undefined 1`] = `
<div
  class="fishd-breadcrumb"
>
  <span>
    <span
      class="fishd-breadcrumb-link"
    >
      Home
    </span>
    <span
      class="fishd-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Breadcrumb should not display Breadcrumb Item when its children is falsy 1`] = `
<div
  class="fishd-breadcrumb"
>
  <span>
    <span
      class="fishd-breadcrumb-link"
    >
      xxx
    </span>
    <span
      class="fishd-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="fishd-breadcrumb-link"
    >
      yyy
    </span>
    <span
      class="fishd-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;
